# txori

./: .coverage  .coveragerc  .flake8  .gitignore  .trufflehogignore  BUILD.md  CHANGELOG.md  CONTEXT.md  JOURNAL.md  LICENSE  README.md  STORIES.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/scripts/: bump_build.py
.github/workflows/: ci.yml
.hypothesis/constants/: 018d6ace501e9d32  21ba7d8e4669e368  43c63c7e02cc690c  505e5c522a67477e  56a6df3686f026d1  6aa992f1984eaca7  7448f3aed2596238  88019a36db6fdbb4  96cffcd34c7008a5  a134996a529ec252  b29bb033722554eb  cf0cf97626f561cf  d177625b38ef2052  d80e7a8a484b51e4  da459736b494c4f5  da873211adc704b2  dba3649765dd0d73  dedbc8d77bf914c9
ejemplos/: sample1.py  sample2.py
script/: audio_cli.py  bump_build.py  generate_docs.sh
scripts/: txori.sh
src/: test2.py  testfreq.py  testwave.py
src/txori/: __init__.py  __main__.py  audio.py  capture.py  cli.py  config.py  core.py  cpu.py  exceptions.py  fft_analysis.py  fft_live.py  filtering.py  live.py  pipeline.py  processing.py  sources.py  visualization.py  waterfall.py
tests/: test_analyzer.py  test_audio.py  test_audio_source.py  test_audio_stream_mock.py  test_capture.py  test_cli.py  test_cli_continuous.py  test_cli_main.py  test_cli_more_args.py  test_cli_parse.py  test_core.py  test_cpu_more.py  test_cpu_paths.py  test_default_audio_multichannel.py  test_fft.py  test_filter.py  test_live.py  test_pipeline.py  test_pipeline_analyze.py  test_pipeline_modes.py  test_processing.py  test_renderer.py  test_sources_8bit.py  test_sources_more.py  test_sources_tone_and_stereo.py  test_stream.py  test_stream_queue_full.py  test_tone.py  test_visual_renderer.py  test_visualization.py  test_visualization_details.py  test_waterfall.py  test_waterfall_spec.py  test_waterfall_utils.py
