[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txori"
version = "1.0.0"
description = "Captura audio de la entrada predeterminada y muestra un gráfico waterfall (espectrograma)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [ { name = "Dr. Pedro E. Colla (LU7DZ)" } ]
keywords = ["audio", "waterfall", "spectrogram", "signal-processing"]

dependencies = [
  "numpy>=1.26",
  "sounddevice>=0.4.6",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "black>=24.10.0",
  "mypy>=1.11.0",
  "pyright>=1.1.389",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "hypothesis>=6.103.0",
  "pydocstyle>=6.3.0",
  "flake8>=7.1.1",
  "bandit>=1.7.9",
  "trufflehog>=2.2.0",
  "pdoc>=14.5.0",
]

[project.scripts]
txori-waterfall = "txori.cli:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "D"]
extend-ignore = ["E203", "E501"]
exclude = ["scripts", "script", "ejemplos", "examples", "docs", ".git", ".github"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
pretty = true
show_error_context = true
exclude = '(^scripts/|^script/|^ejemplos/|^examples/|^docs/|^tests/_data/)'

[tool.flake8]
max-line-length = 100
extend-ignore = "E203,E501,E402"
exclude = ".git,__pycache__,.venv,build,dist,docs,.github,scripts,script,ejemplos,examples"

[tool.pydocstyle]
convention = "pep257"
match = '.*\.py'
match-dir = '(?!tests|scripts|script|ejemplos|examples|docs|\.github).*'

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
